# Hybrid_UAV-UGV

./: .gitignore  README.md  requirements.txt
docker/ros2_humble/: Dockerfile  docker-compose.yml
software/morphobot_ws/: README.md  READY_TO_TEST.md  launch_all.sh  launch_complete_system.sh  launch_mavros.sh  launch_rc_control.sh  run_all.sh  run_control_nodes.sh  run_px4_bridge.sh  run_ros2_control.sh  run_service_node.sh  run_ugv_control.sh  setup_hardware_interface.sh  setup_workspace.sh  test_servos.py
software/morphobot_ws/src/: .gitignore
software/morphobot_ws/src/bringup/: package.xml  setup.py
software/morphobot_ws/src/control/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
software/morphobot_ws/src/control/control/: mode_manager_node.py  morphing_control_node.py  px4_rc_bridge.py  system_monitor.py  uav_control_node.py  ugv_control_node.py  ugv_motor_controller.py
software/morphobot_ws/src/control/launch/: morphobot_bringup.launch.py
software/morphobot_ws/src/hybrid_robot_control/: package.xml  setup.cfg  setup.py
software/morphobot_ws/src/hybrid_robot_hardware/: CMakeLists.txt  QUICKSTART.md  README.md  TECHNICAL_WALKTHROUGH.md  TEST.md  package.xml  setup.cfg  setup.py  st3215_hardware_interface.xml
software/morphobot_ws/src/hybrid_robot_hardware/config/: controllers.yaml
software/morphobot_ws/src/hybrid_robot_hardware/doc/: TECHNICAL_WALKTHROUGH.md
software/morphobot_ws/src/hybrid_robot_hardware/hybrid_robot_hardware/: low_level_driver.py  low_level_test.py  motor_driver.py  motor_driver_test.py  st3215_service_node.py
software/morphobot_ws/src/hybrid_robot_hardware/include/hybrid_robot_hardware/: st3215_hardware_interface.hpp
software/morphobot_ws/src/hybrid_robot_hardware/launch/: robot_control.launch.py
software/morphobot_ws/src/hybrid_robot_hardware/nodes/: st3215_service_node.py
software/morphobot_ws/src/hybrid_robot_hardware/scripts/: servo_sequence.py  test_position_commands.py  test_service.py  test_servo_detection.py
software/morphobot_ws/src/hybrid_robot_hardware/src/: st3215_hardware_interface.cpp
software/morphobot_ws/src/hybrid_robot_hardware/srv/: ReadPositions.srv  ReadVelocities.srv  WriteVelocities.srv
software/morphobot_ws/src/hybrid_robot_hardware/urdf/: hybrid_robot.urdf.xacro  robot.urdf.xacro
software/morphobot_ws/src/hybrid_robot_msgs/: CMakeLists.txt  package.xml
software/morphobot_ws/src/hybrid_robot_msgs/msg/: ServoCommand.msg
software/morphobot_ws/src/hybrid_robot_state/: package.xml  setup.cfg  setup.py
software/morphobot_ws/src/morphing_control/: package.xml  setup.cfg  setup.py
software/morphobot_ws/src/morphobot_urdf/: CMakeLists.txt  package.xml
software/morphobot_ws/src/morphobot_urdf/config/: joint_names_morphobot.zip.yaml  morphobot.rviz
software/morphobot_ws/src/morphobot_urdf/launch/: display.launch  gazebo.launch  gazebo_sim.launch.py  view_robot.launch.py
software/morphobot_ws/src/morphobot_urdf/meshes/: append_BL.STL  append_BR.STL  append_FL.STL  append_FR.STL  chassis.STL  prop_BL.STL  prop_BR.STL  prop_FL.STL  prop_FR.STL  servo_bracket_BL.STL  servo_bracket_BR.STL  servo_bracket_FL.STL  servo_bracket_FR.STL  wheel_BL.STL  wheel_BR.STL  wheel_FL.STL  wheel_FR.STL
software/morphobot_ws/src/morphobot_urdf/urdf/: hybrid_robot.urdf.xacro  morphobot.urdf
software/morphobot_ws/src/px4_interface/: package.xml  setup.cfg  setup.py
software/morphobot_ws/src/python-st3215-main/: setup.py
software/morphobot_ws/src/python-st3215-main/python_st3215.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
software/morphobot_ws/src/python-st3215-main/st3215/: __init__.py  protocol_packet_handler.py  values.py
software/morphobot_ws/src/python-st3215-main/test/: calibration.py  test_01_ping_servo.py  test_08_read_status.py  test_anything.py  test_anything_1.py  test_writeposition.py
software/morphobot_ws/src/st3215_driver/: README.md  setup.py
software/morphobot_ws/src/st3215_driver/st3215/: group_sync_read.py  port_handler.py  st3215.py
software/morphobot_ws/src/st3215_driver/test/: test_02_list_servos.py  (+2 more)
software/morphobot_ws/src/testing_motor/python-st3215-main/: README.md  setup.cfg  setup.py
software/morphobot_ws/src/testing_motor/python-st3215-main/.github/workflows/: main.yml
software/morphobot_ws/src/testing_motor/python-st3215-main/st3215/: st3215.py  values.py
software/morphobot_ws/src/testing_motor/python-st3215-main/st3215.egg-info/: PKG-INFO  SOURCES.txt
software/morphobot_ws/src/testing_motor/python-st3215-main/test/: README.md  calibration.py  test_04_read_temperature.py  test_05_read_acceleration.py  test_10_complete_motion_control.py  test_anything.py  test_without_library.py
software/morphobot_ws/src/ugv_control/: package.xml  setup.cfg  setup.py
software/morphobot_ws/src/ugv_motor_driver/: CMakeLists.txt  README.md  package.xml  st3215_hardware_interface.xml
software/morphobot_ws/src/ugv_motor_driver/config/: controllers.yaml  st3215_params.yaml
software/morphobot_ws/src/ugv_motor_driver/include/ugv_motor_driver/: st3215_hardware_interface.hpp
software/morphobot_ws/src/ugv_motor_driver/launch/: robot_control.launch.py  robot_control_only.launch.py
software/morphobot_ws/src/ugv_motor_driver/nodes/: motor_driver_node.py  read.py  st3215_service_node.py  test.py
software/morphobot_ws/src/ugv_motor_driver/src/: st3215_hardware_interface.cpp
software/morphobot_ws/src/ugv_motor_driver/srv/: WritePositions.srv
software/morphobot_ws/src/ugv_motor_driver/urdf/: hybrid_robot.urdf.xacro
software/st3215_driver/: setup.py
software/st3215_driver/st3215/: group_sync_write.py  st3215.py
software/st3215_driver/test/: test_03_read_load_voltage_current.py  test_07_read_correction.py
software/visual_inspection/: .oakappignore  README.md  main.py  oakapp.toml  requirements.txt
software/visual_inspection/.depthai_cached_models/abfc46233063c04d37a9c548781af353cc638f00/: metadata.yaml
software/visual_inspection/depthai_models/: yolov6_nano_r2_coco.RVC2.yaml  yolov6_nano_r2_coco.RVC4.yaml
software/visual_inspection/utils/: arguments.py
