[bumpversion]
current_version = 0.0.1

[metadata]
name = st3215
author = Mickael Roger
author_email = mickael@mickael-roger.com
description = A library to manage ST3215 servo motors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mickael-Roger/python-st3215
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache License
	Operating System :: OS Independent

[aliases]
release = sdist bdist_wheel
test = pytest

[wheel]
universal = 0
